fixed bugs on firefox

--- a/src/static/base/css/blog-home.css
+++ b/src/static/base/css/blog-home.css
@@ -11,3 +11,7 @@ body {
 footer {
     margin: 50px 0;
 }
+
+div.syntaxhighlighter .container:before,div.syntaxhighlighter .container:after {
+    content:none;
+}
